// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lsp completion > resolves documentation for a file module completion 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_open[file=packages/app/src/App.res]",
  "  lsp.did_change[file=packages/app/src/App.res]",
  "  lsp.completion[file=packages/app/src/App.res, module=App, package=@rewatch-test/app, items_count=1]",
  "    lsp.completion.ensure_cmt",
  "    lsp.completion.build_context",
  "    lsp.completion.analysis_binary",
  "  lsp.completion_resolve[file=packages/app/src/App.res, module=App, package=@rewatch-test/app]",
  "    lsp.completion_resolve.build_context",
  "    lsp.completion_resolve.analysis_binary",
]
`;

exports[`lsp completion > returns completions for a module dot access 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_open[file=src/Root.res]",
  "  lsp.did_change[file=src/Root.res]",
  "  lsp.completion[file=src/Root.res, module=Root, package=rewatch-test-fixture, items_count=1]",
  "    lsp.completion.ensure_cmt",
  "    lsp.completion.build_context",
  "    lsp.completion.analysis_binary",
]
`;

exports[`lsp completion > returns completions for stdlib modules like Console 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_open[file=src/Root.res]",
  "  lsp.did_change[file=src/Root.res]",
  "  lsp.completion[file=src/Root.res, module=Root, package=rewatch-test-fixture, items_count=55]",
  "    lsp.completion.ensure_cmt",
  "    lsp.completion.build_context",
  "    lsp.completion.analysis_binary",
]
`;
